# tira

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
agent-worker/: Dockerfile  pyproject.toml
agent-worker/src/agent_worker/: agent.py  celery_app.py  config.py  models.py  prompts.py  tasks.py  tools.py  tracing.py
agent-worker/src/agent_worker/evaluation/: __init__.py  harness.py  runner.py  simple_eval.py  suites.py
agent-worker/src/agent_worker/evaluation/datasets/: coverage.json  expectations_dataset.json  factual_accuracy.json  groundedness.json  placeholder.json  source_quality.json
agent-worker/src/agent_worker/evaluation/scorers/: __init__.py  code_based.py  model_based.py
agent-worker/src/agent_worker/guardrails/: __init__.py  input_guardrails.py  output_guardrails.py
agent-worker/src/agent_worker/sub_agents/: __init__.py  company.py  financials.py  investment.py  market.py
frontend/: Dockerfile  pyproject.toml
frontend/src/frontend/: api_client.py  app.py  config.py
task-queue-backend/: Dockerfile  pyproject.toml
task-queue-backend/src/task_queue_backend/: celery_client.py  config.py  main.py  schemas.py  task_registry.py
task-queue-backend/src/task_queue_backend/routers/: research.py
tests/: conftest.py  test_e2e.py
tracing-server/: Dockerfile
