[project]
name = "agent-worker"
version = "0.1.0"
description = "TIRA Research Agent Worker — Celery worker running OpenAI Agent SDK"
requires-python = ">=3.13"
dependencies = [
    "openai-agents",
    "celery[redis]",
    "mlflow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_worker"]
