[project]
name = "agent-worker"
version = "0.1.0"
description = "TIRA Research Agent Worker — Celery worker running OpenAI Agent SDK"
requires-python = ">=3.13"
dependencies = [
    "openai-agents",
    "celery[redis]",
    "mlflow",
    "openai>=2.31.0",
    "pandas",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
tira-eval = "agent_worker.evaluation.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_worker"]

[tool.pytest.ini_options]
markers = ["eval: evaluation suite, requires MLflow and OpenAI API key"]
