[project]
name = "frontend"
version = "0.1.0"
description = "TIRA Frontend — Streamlit UI for portfolio managers"
requires-python = ">=3.13"
dependencies = [
    "streamlit",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]
